@@ -1,3 +1,3 @@
 from system import *
 
-__VERSION__ = '1.2.8'
+__VERSION__ = '1.2.9'
